--- a/bower.json
+++ b/bower.json
@@ -25,11 +25,13 @@
     "extras.angular.plus": "~0.9.2",
     "font-awesome": "~4.5.0",
     "moment": "~2.12.0",
-    "angular-ui-router": "~0.4.2",
+    "angular-ui-router": "^1.0.29",
     "toastr": "~2.1.2",
     "angular-bootstrap": "~1.2.5",
     "ng-file-upload-shim": "^12.2.13",
-    "ng-file-upload": "^12.2.13"
+    "ng-file-upload": "^12.2.13",
+    "angular-touch": "^1.8.2",
+    "angular-route": "^1.8.2"
   },
   "resolutions": {
     "angular": "~1.5.9"
