--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@fortawesome/angular-fontawesome": "^0.7.0",
     "@popperjs/core": "^2.5.4",
+    "angular-animate": "^1.8.2",
     "angular-bootstrap": "^0.12.2",
     "angular-cookies": "^1.5.9",
     "angular-google-maps": "^2.4.1",
+    "angular-route": "^1.8.2",
+    "angular-touch": "^1.8.2",
     "body-parser": "~1.8.2",
     "bootstrap": "^4.5.2",
     "cors": "^2.8.5",
@@ -33,7 +36,7 @@
     "debug": "~2.0.0",
     "del": "~1.2.0",
     "glob": "~4.5.3",
-    "gulp": "~3.8.10",
+    "gulp": "^3.9.1",
     "gulp-angular-templatecache": "~1.4.2",
     "gulp-autoprefixer": "~2.3.1",
     "gulp-bump": "~0.3.1",
@@ -72,7 +75,6 @@
     "karma-firefox-launcher": "~0.1.3",
     "karma-growl-reporter": "~0.1.1",
     "karma-mocha": "~0.2.0",
-    "phantomjs-prebuilt": "~2.1.4",
     "karma-phantomjs-launcher": "~1.0.0",
     "karma-safari-launcher": "~0.1.1",
     "karma-sinon": "~1.0.3",
@@ -80,6 +82,7 @@
     "method-override": "~2.3.4",
     "mocha": "~2.2.5",
     "node-notifier": "~4.0.3",
+    "phantomjs-prebuilt": "~2.1.4",
     "plato": "~1.2.0",
     "q": "~1.0.1",
     "semver": "~5.3.0",
